apply reviewer notes

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -224,7 +224,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# returns \"True\" if face is detected in image stored at img_path\n",
@@ -373,7 +375,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.preprocessing import image                  \n",
@@ -408,7 +412,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.applications.resnet50 import preprocess_input, decode_predictions\n",
@@ -433,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### returns \"True\" if a dog is detected in the image stored at img_path\n",
@@ -661,7 +669,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.compile(optimizer='rmsprop', loss='categorical_crossentropy', metrics=['accuracy'])"
@@ -758,7 +768,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.load_weights('saved_models/weights.best.from_scratch.hdf5')"
@@ -811,7 +823,9 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bottleneck_features = np.load('bottleneck_features/DogVGG16Data.npz')\n",
@@ -870,7 +884,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "VGG16_model.compile(loss='categorical_crossentropy', optimizer='rmsprop', metrics=['accuracy'])"
@@ -985,7 +1001,9 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "VGG16_model.load_weights('saved_models/weights.best.VGG16.hdf5')"
@@ -1032,7 +1050,9 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from extract_bottleneck_features import *\n",
@@ -1170,7 +1190,9 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### TODO: Compile the model.\n",
@@ -1387,7 +1409,9 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### TODO: Load the model weights with the best validation loss.\n",
@@ -1449,7 +1473,9 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### TODO: Write a function that takes a path to an image as input\n",
@@ -1489,7 +1515,9 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### TODO: Write your algorithm.\n",
@@ -1530,13 +1558,22 @@
     "\n",
     "__Answer:__ \n",
     "\n",
-    "- The output is about the same as what I expected. The dog breeds were predicted accurately and human faces were detected. Non-human and non-dog images got an error"
+    "- The output is about the better than what I expected. The dog breeds were predicted accurately and human faces were detected. Non-human and non-dog images got an error.\n",
+    "\n",
+    "- __Improvments__:\n",
+    "    - Incease the accuracy of the face detector as it sometimes misclassifies dog as humans. In question1, the percent of detected human faces in dog_files_short is 11.0 %. We can use multible OpenCV detectors and combine their results for better human face detection.\n",
+    "    \n",
+    "    - Enhance dog detector for _DOG MUTTS_, The algorithm is currently guaranteed to fail for every mixed breed dog.\n",
+    "    \n",
+    "    - Enhance the returned prediction result as if a returned prediction probability over 95% then it would be approximately proper classification, but when the returned prediction probability is below 50% or somewhat near around,then it should not accept the classification."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 211,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## TODO: Execute your algorithm from Step 6 on\n",
@@ -1823,7 +1860,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1845,7 +1884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
